# manta50_fw

./: .gitignore  .gitmodules  CMakeLists.txt  CanOpen.txt  README.md  manta50.c
cmake/: mw-src.cmake  options.cmake  toolchain-ti-c2000.cmake
include/ADC_temp/: ADC_temp.h
include/DRV8305/: drv8305.c
include/c2000-canopen/: PDO_mapping.txt  can.c  canopen-init.c  canopen-init.h
include/can/: can.h
include/can-fifo/: can-fifo.c  can-fifo.h
include/dronecan/: dronecan.c  dronecan.h  dronecan_init.c
include/dsdlc_generated/include/: uavcan.CoarseOrientation.h  uavcan.Timestamp.h  uavcan.equipment.actuator.ArrayCommand.h  uavcan.equipment.actuator.Command.h  uavcan.equipment.actuator.Status.h  uavcan.equipment.ahrs.MagneticFieldStrength.h  uavcan.equipment.ahrs.MagneticFieldStrength2.h  uavcan.equipment.ahrs.RawIMU.h  uavcan.equipment.ahrs.Solution.h  uavcan.equipment.air_data.AngleOfAttack.h  uavcan.equipment.air_data.IndicatedAirspeed.h  uavcan.equipment.air_data.RawAirData.h  uavcan.equipment.air_data.Sideslip.h  uavcan.equipment.air_data.StaticPressure.h  uavcan.equipment.air_data.StaticTemperature.h  uavcan.equipment.air_data.TrueAirspeed.h  uavcan.equipment.camera_gimbal.AngularCommand.h  uavcan.equipment.camera_gimbal.GEOPOICommand.h  uavcan.equipment.camera_gimbal.Mode.h  uavcan.equipment.camera_gimbal.Status.h  uavcan.equipment.device.Temperature.h  uavcan.equipment.esc.RPMCommand.h  uavcan.equipment.esc.RawCommand.h  uavcan.equipment.esc.Status.h  uavcan.equipment.esc.StatusExtended.h  uavcan.equipment.gnss.Auxiliary.h  uavcan.equipment.gnss.ECEFPositionVelocity.h  uavcan.equipment.gnss.Fix.h  uavcan.equipment.gnss.Fix2.h  uavcan.equipment.gnss.RTCMStream.h  uavcan.equipment.hardpoint.Command.h  uavcan.equipment.hardpoint.Status.h  uavcan.equipment.ice.FuelTankStatus.h  uavcan.equipment.ice.reciprocating.CylinderStatus.h  uavcan.equipment.ice.reciprocating.Status.h  uavcan.equipment.indication.BeepCommand.h  uavcan.equipment.indication.LightsCommand.h  uavcan.equipment.indication.RGB565.h  uavcan.equipment.indication.SingleLightCommand.h  uavcan.equipment.power.BatteryInfo.h  (+63 more)
include/dsdlc_generated/src/: uavcan.CoarseOrientation.c  uavcan.equipment.actuator.ArrayCommand.c  uavcan.equipment.ahrs.MagneticFieldStrength.c  uavcan.equipment.ahrs.MagneticFieldStrength2.c  uavcan.equipment.ahrs.RawIMU.c  uavcan.equipment.ahrs.Solution.c  uavcan.equipment.air_data.RawAirData.c  uavcan.equipment.camera_gimbal.AngularCommand.c  uavcan.equipment.camera_gimbal.Status.c  uavcan.equipment.esc.RPMCommand.c  uavcan.equipment.esc.RawCommand.c  uavcan.equipment.gnss.ECEFPositionVelocity.c  uavcan.equipment.gnss.Fix.c  uavcan.equipment.gnss.Fix2.c  uavcan.equipment.gnss.RTCMStream.c  uavcan.equipment.ice.reciprocating.Status.c  uavcan.equipment.indication.LightsCommand.c  uavcan.equipment.power.BatteryInfo.c  uavcan.navigation.GlobalNavigationSolution.c  uavcan.protocol.AccessCommandShell_req.c  uavcan.protocol.AccessCommandShell_res.c  uavcan.protocol.GetDataTypeInfo_req.c  uavcan.protocol.GetDataTypeInfo_res.c  uavcan.protocol.GetNodeInfo_res.c  uavcan.protocol.GetTransportStats_res.c  uavcan.protocol.HardwareVersion.c  uavcan.protocol.Panic.c  uavcan.protocol.debug.KeyValue.c  uavcan.protocol.debug.LogMessage.c  uavcan.protocol.dynamic_node_id.Allocation.c  uavcan.protocol.dynamic_node_id.server.AppendEntries_req.c  uavcan.protocol.dynamic_node_id.server.Discovery.c  uavcan.protocol.dynamic_node_id.server.Entry.c  uavcan.protocol.enumeration.Begin_req.c  uavcan.protocol.enumeration.Indication.c  uavcan.protocol.file.BeginFirmwareUpdate_res.c  uavcan.protocol.file.Path.c  uavcan.protocol.file.Read_res.c  uavcan.protocol.file.Write_req.c  uavcan.protocol.param.GetSet_req.c  (+6 more)
include/eeprom-pm/: eeprom-pm.c  eeprom-pm.h
include/eeprom25aa02/: Microchip_25AA02E48.c  Microchip_25AA02E48.h  README.md
include/hal/: hal.c  hal.h  hal_obj.h
include/libcanopen/: .gitignore  Makefile  README  README.tips
include/libcanopen/include/: can.h  canopen-dict.h  canopen-lss.h  canopen-nmt.h  canopen-pdo.h  canopen-sdo.h  canopen.h
include/libcanopen/include/arch/: arch.h
include/libcanopen/src/: canopen-dict.c  canopen-lss.c  canopen-nmt.c  canopen-pdo.c  canopen-sdo.c  canopen.c
include/libcanopen/src/arch/avr/: README  arch.c  can.cpp
include/libcanopen/src/arch/c2000/: arch.c
include/libcanopen/tests/: canopen-latency-test.exp
include/mcp2515/: mcp_can.c  mcp_can.h  mcp_can_dfs.h
include/user/: user.h  user.h_old
